[project]
name = "shuffle-archive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "html-to-markdown>=2.9.1",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "markdown>=3.9",
    "user-agent>=0.1.14",
]
[tool.ty.rules]
non-subscriptable = "ignore"
possibly-missing-attribute = "ignore"