[project]
name = "shuffle-archive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "html-to-markdown>=2.9.1",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "markdown>=3.9",
    "pandas>=2.3.3",
    "pre-commit>=4.6.0",
    "psycopg[binary,pool]>=3.3.4",
    "pymarkdownlnt>=0.9.37",
    "python-dotenv>=1.2.2",
    "standardebooks>=2.10.2",
    "user-agent>=0.1.14",
    "utidylib>=1.0.0",
    "yt-dlp>=2026.3.17",
    "yt-dlp-ejs>=0.8.0",
]
[tool.ty.rules]
not-subscriptable = "ignore"
possibly-missing-attribute = "ignore"
